# Reassist

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  report.md  requirements.txt  vercel.json
.next/: trace
.next/cache/: .tsbuildinfo
.next/server/: server-reference-manifest.json
.next/server/app/: page.js  page.js.nft.json  page_client-reference-manifest.js
.next/server/chunks/: 666.js
.next/server/pages/: _document.js.nft.json
.next/static/chunks/: _error.js  (+6 more)
frontend/: README.md  middleware.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Citation.tsx  DashboardPage.tsx  FollowUpInput.tsx  Footer.tsx  HistoryPage.tsx  Navbar.tsx  ProgressIndicator.tsx  ResearchInput.tsx  ResearchReport.tsx  SettingsPage.tsx  SourcesList.tsx  ThemeProvider.tsx  index.ts
frontend/hooks/: use-research.ts
frontend/lib/: database.ts  mock-research.ts  supabase-middleware.ts  supabase-server.ts  supabase.ts  types.ts
frontend/supabase/: schema.sql
src/: __init__.py  main.py
src/agent/: __init__.py  orchestrator.py  planner.py  prompts.py
src/memory/: __init__.py  session.py  vector_store.py
src/synthesis/: __init__.py  citations.py  report.py
src/tools/: __init__.py  analyze.py  base.py  fetch.py  search.py
src/utils/: __init__.py  config.py  cost_tracker.py  llm.py  logging.py  quality.py
tests/: test_citations.py  test_e2e.py  test_integration.py  test_memory.py  test_quality.py  test_tools.py
(+37 files in other folders)
